Fixed the scrolling for the sidebar on small mobile devices, as it was not showing all the content correctly.

--- a/strapi_menu/src/index.css
+++ b/strapi_menu/src/index.css
@@ -253,6 +253,8 @@ Sidebar
 .sidebar-container {
   padding: 4rem 2rem;
   position: relative;
+  overflow-y: auto;
+  height: 100%;
 }
 
 .close-btn {
